aws-cloudformation/solutions/advanced/mean-stack/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.nano
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: "9"
    MaxLength: "18"
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      AvailabilityZones: !GetAZs ""
      CrossZone: "true"
      Listeners:
        - LoadBalancerPort: "80"
          InstancePort: "80"
          Protocol: HTTP
      HealthCheck:
        Target: HTTP:80/
        HealthyThreshold: "3"
        UnhealthyThreshold: "5"
        Interval: "30"
        Timeout: "5"
      ConnectionDrainingPolicy:
        Enabled: "true"
        Timeout: "300"
  WebServerGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs ""
      LaunchConfigurationName: !Ref "LaunchConfig"
      MinSize: "2"
      MaxSize: "2"
      LoadBalancerNames: [!Ref "ElasticLoadBalancer"]
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: "1"
        MaxBatchSize: "1"
  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      KeyName: !Ref "KeyName"
      ImageId: "ami-0b898040803850657"
      SecurityGroups:
        - Ref: WebSecurityGroup
      InstanceType: !Ref "InstanceType"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          sudo yum update -y && sudo yum install -y git

          # install docker
          sudo amazon-linux-extras install -y docker
          sudo service docker start
          sudo usermod -a -G docker ec2-user

          sudo docker run \
            --rm -d \
            -p 80:3000 \
            -e mongo_ip="${MongoInstance.PublicIp}" \
            -e mongo_user="user" \
            -e mongo_pw="pw" \
            tgotwig/mean_mytasklist:latest
  MongoInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: InstanceType
      SecurityGroups:
        - Ref: MongoSecurityGroup
      KeyName:
        Ref: KeyName
      ImageId: "ami-0b898040803850657"
      UserData: !Base64 |
        #!/bin/bash
        sudo yum update -y

        # install docker
        sudo amazon-linux-extras install -y docker
        sudo service docker start
        sudo usermod -a -G docker ec2-user 

        sudo docker run \
          --rm -d \
          --name some-mongo \
          -e MONGO_INITDB_ROOT_USERNAME=user \
          -e MONGO_INITDB_ROOT_PASSWORD=pw \
          -p 27017:27017 mongo
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP access on the configured port
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: !Ref "SSHLocation"
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
  MongoSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and Mongo access on the configured port
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: !Ref "SSHLocation"
        - IpProtocol: tcp
          FromPort: "27017"
          ToPort: "27017"
          CidrIp: 0.0.0.0/0
Outputs:
  URL:
    Description: URL of the website
    Value: !Join ["", ["http://", !GetAtt [ElasticLoadBalancer, DNSName]]]
